ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
11/07/2016 Oleh Derevenko
        * The implementation of OPCODE TriMesh data pre-processing 
          (dGeomTriMeshDataPreprocess()) has been optimized to only contain
          a sort and a single pass over edges (used to be a sort and O(N^2)).

10/29/2016 Oleh Derevenko
        * dGeomTriMeshDataPreprocess() public function has been changed to 
          return a boolean status (it can fail in low memory conditions).

07/10/2016 Oleh Derevenko
        * The correct handling of dJOINT_REVERSE mode for AngularMotor Joint 
          implemented (issue #37).

06/29/2016 Oleh Derevenko
        * A bug fixed with HashSpace calling big boxes collision twice 
          (both straight and reverse geometries order) since revision #1831.

06/03/2016 Oleh Derevenko
        * dJointSetHinge2Axes public function has been added and 
          dJointSetHinge2Axis1/2 have been marked deprecated due to being 
          unsafe.

05/13/2016 Oleh Derevenko
        * ICE Container class allocation strategy fixed to avoid reserving 
          excess memory with large collections.

05/10/2016 Oleh Derevenko
        * dSafeNormalize3 and dSafeNormalize4 functions changed to leave the
          parameter intact instead of replacing it with the X-axis unit in case 
          of fault.

04/12/2016 Oleh Derevenko
        * A function to create a self-threaded threading implementation object
          has been moved back to public headers as there could be a use for it
          while running several worlds in parallel threads.

01/09/2016 Oleh Derevenko
        * Hinge2 joint corected to avoid faulting asserts when the axes get 